# AISD-2

./: BST.py  dokumentacja .docx  dokumentacja.docx  jarwis.py  snowwhite_suite.txt  test_zadanie_09.py  zad10.py  zad4.py  zad5.py  zadanie_09.py
AIDS2/: pyproject.toml
AIDS2/snowwhite_suite/: modul3_rmq.py
AIDS2/testy/: test_modul3.py
