[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowwhite_suite"
version = "0.1.0"
description = "Zintegrowany system optymalizacji pracy Królestwa Krasnoludków"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[tool.mypy]
strict = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88